create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                         <img src="assets/images/curebandlogo-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section info1 cid-rcX0vXYC0h" id="info1-4">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section info1 cid-rcX0vXYC0h" id="info1-4">
 
     
 
