--- a/page3.html
+++ b/page3.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                         <img src="assets/images/curebandlogo-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -56,7 +56,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
