--- a/page1.html
+++ b/page1.html
@@ -48,15 +48,15 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page1.html">Heart Rate Data</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html">Emergency Contacts</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">Settings</a></li></ul>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co">Heart Rate Data</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">Emergency Contacts</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobirise.co">Settings</a></li></ul>
             
         </div>
     </nav>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/b">how to create your own website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
