--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section info1 cid-rcX0vXYC0h" id="info1-4">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section info1 cid-rcX0vXYC0h" id="info1-4">
 
     
 
@@ -68,7 +68,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-5">&nbsp;</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-secondary display-4" href="https://mobirise.co">SEE MORE</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-secondary display-4" href="page1.html">SEE MORE</a></div>
             </div>
         </div>
     </div>
